fixed spacing and padding issue on the header card element

--- a/template/bootstrap.css
+++ b/template/bootstrap.css
@@ -20,6 +20,17 @@
 
 }
 
+.col-8 {
+  align-items: center;
+  justify-content: center;
+  height: 225%;
+}
+
+.h1 {
+  padding-top: 24px;
+  margin-top: 8px;
+}
+
 .table{
   border-spacing: 5px 1rem;
   padding: 0 2em 1em 0;
@@ -43,6 +54,7 @@
 
 h2 {
   text-align: center;
+  font-weight: bolder;
 }
 
 .cards bg-light{
@@ -51,8 +63,8 @@ h2 {
 }
 
 p {
+  text-align: left;
   font-weight: bold;
-  text-align: initial;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
